Final fixes before undraft